--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/CHCI-LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHCI</title>
+    <title>Center for Human-Computer Interaction</title>
   </head>
   <body class="">
     <div id="root"></div>
